// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoreButton matches snapshot (empty) 1`] = `
<span
  class="more-button bp5-popover-target"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="bp5-button bp5-disabled"
    disabled=""
    tabindex="-1"
    title="More actions"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp5-icon bp5-icon-more"
    >
      <svg
        data-icon="more"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`MoreButton matches snapshot (full) 1`] = `
<span
  class="more-button bp5-popover-target"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="bp5-button"
    title="More actions"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp5-icon bp5-icon-more"
    >
      <svg
        data-icon="more"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</span>
`;
